--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-toggle-dark-mode": "^1.1.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
