--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-toggle-dark-mode": "^1.1.1",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "vite": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -29,7 +30,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "typescript": "^5.0.2"
   }
 }
