--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
+    "dayjs": "^1.11.13",
     "markdown-to-jsx": "^7.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
