--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-spinners": "^0.14.1",
     "react-toggle-dark-mode": "^1.1.1",
     "typewriter-effect": "^2.19.0",
     "vite": "^4.3.8"
