--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "markdown-to-jsx": "^7.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.14.1",
