--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "portfolio-v2",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": {
+    "name": "Kritesh Timsina",
+    "email": "kriteshtimsina55@gmail.com",
+    "url": "https://kriteshtimsina.com.np"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
