--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^4.8.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.14.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toggle-dark-mode": "^1.1.1",
+    "remark-gfm": "^4.0.1",
     "typewriter-effect": "^2.19.0",
     "vite": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "autoprefixer": "^10.4.14",
